# personal-accountant

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.db  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2563d57f2a78_create_budget_budget_line_fx_rate_yyyymm.py  6d1b7f4959f3_add_transaction_table.py  b73d4b45a944_baseline_all_tables.py  d9e3ca85e075_add_transaction_table.py  da89cf26bd3d_add_budget_budget_line_fx_rate_yyyymm.py  f2971cdb1ad7_init.py
app/: config.py  db.py  flash.py  main.py  models.py  observability.py  period_ym.py  security.py
app/routers/: auth.py  budget.py  system.py  transactions.py  transactions_import.py
app/services/: transactions.py
app/templates/: base.html  index.html
app/templates/auth/: delete.html  signin.html  signup.html
app/templates/budget/: line_form.html  lines_import.html  lines_list.html
app/templates/partials/: flash.html
app/templates/transactions/: form.html  import.html  import_form.html  list.html
tests/: conftest.py  test_budget_import.py  test_budget_lines.py  test_transactions_service.py
